[metadata]
name = vin_parser
version = 0.0.1
description = This is vin-parser package description
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
author = Daniel Ciumberică
author_email = ciumbi.ionut@gmail.com
url = http://example.com

[options]
packages = find:
install_requires = requests==2.22.0

[options.package_data]
* = data/*
