[metadata]
name = vin-parser
version = 0.0.1
description = This is vin-parser package description
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
author = Daniel Ciumberică
author_email = ciumbi.ionut@gmail.com
url = https://github.com/nighcoder/vin-parser 
keywords = VIN, WMI, VDS, OBD
classifiers =
	Developement Status :: 3 - Alpha
	Intended Audience :: Developers
	Licence :: OSI Approved :: MIT Licence
	Operating System :: OS Independent
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.6
	Topic :: Software Developpement :: Utilities

[options]
packages = find:
install_requires = requests==2.22.0

[options.package_data]
* = data/*
